--- a/src/Germandf.Website/Pages/Index.razor
+++ b/src/Germandf.Website/Pages/Index.razor
@@ -2,8 +2,4 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<MudText Typo="Typo.h3" Align="Align.Center" Class="my-4">Hello, world! Working!</MudText>
