Header component, changes page info on LocationChanged event

--- a/src/Germandf.Website/Pages/Index.razor
+++ b/src/Germandf.Website/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@attribute [Title("Index")]
+@attribute [PageData(title: "Index")]
 @inject IPageService _pageService
 
 <PageTitle>Index</PageTitle>
