--- a/src/Germandf.Website/_Imports.razor
+++ b/src/Germandf.Website/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using Germandf.Website
 @using Germandf.Website.Shared
+@using Germandf.Website.Extensions
 @using Germandf.Website.Attributes
 @using Germandf.Website.Services
 @using Germandf.Website.Data
