--- a/src/Germandf.Website/Pages/TestPageWithTitle.razor
+++ b/src/Germandf.Website/Pages/TestPageWithTitle.razor
@@ -1,7 +1,7 @@
 ﻿@page "/page-with-title"
 @attribute [PageData(title: "Page with title's title")]
 
-<h3>Page with title</h3>
+<h3>Content</h3>
 
 @code {
 
