NavMenu first implementation, missing custom color, autocomplete correct style and functionality

--- a/src/Germandf.Website/Shared/MainLayout.razor
+++ b/src/Germandf.Website/Shared/MainLayout.razor
@@ -4,7 +4,13 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<MudContainer>
-    <Header />
-    @Body
-</MudContainer>
+<MudLayout>
+    <NavMenu />
+    <MudMainContent Class="pt-16 px-16">
+        <MudContainer Class="mt-6">
+            <Header />
+            @Body
+        </MudContainer>
+    </MudMainContent>
+    <Footer />
+</MudLayout>
