--- a/src/Germandf.Website/Pages/About/About.razor
+++ b/src/Germandf.Website/Pages/About/About.razor
@@ -1,5 +1,5 @@
 ﻿@page "/about"
-@attribute [PageData(title: "About")]
+@attribute [PageData(title: "About", description: "Information about me", isFeatured: true)]
 
 <h3>About</h3>
 
