--- a/src/Germandf.Website/Pages/Blog/Blog.razor
+++ b/src/Germandf.Website/Pages/Blog/Blog.razor
@@ -1,5 +1,5 @@
 ﻿@page "/blog"
-@attribute [PageData(title: "Blog")]
+@attribute [PageData(title: "Blog", description: "Tutorials, opinions, etc.", isFeatured: true)]
 
 <h3>Blog</h3>
 
