--- a/src/Germandf.Website/Pages/Index.razor
+++ b/src/Germandf.Website/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@attribute [PageData(title: "Home")]
+@attribute [PageData(title: "Home", description: "Information about the website", isFeatured: false)]
 @inject IPageService _pageService
 
 <MudText Typo="Typo.h3" Align="Align.Center" Class="my-4">Hello, world!</MudText>
