--- a/src/Germandf.Website/Pages/Tools/Tools.razor
+++ b/src/Germandf.Website/Pages/Tools/Tools.razor
@@ -1,5 +1,5 @@
 ﻿@page "/tools"
-@attribute [PageData(title: "Tools")]
+@attribute [PageData(title: "Tools", description: "Utilities for general purpose", isFeatured: true)]
 
 <h3>Tools</h3>
 
