--- a/src/Germandf.Website/Shared/NavMenu.razor
+++ b/src/Germandf.Website/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
         <NavLink ActiveClass="d-flex me-4" href="/">
             <MudAvatar Image="https://avatars.githubusercontent.com/u/69018178" Alt="GermandF's github avatar" />
         </NavLink>
-        <MudButton Href="games/prototype-1-scene-1" Color="Color.Inherit" Variant="Variant.Text">Prototype 1 Scene 1</MudButton>
+        <MudButton Href="games" Color="Color.Inherit" Variant="Variant.Text">Games</MudButton>
         <MudButton Href="blog" Color="Color.Inherit" Variant="Variant.Text">Blog</MudButton>
         <MudButton Href="tools" Color="Color.Inherit" Variant="Variant.Text">Tools</MudButton>
         <MudButton Href="about" Color="Color.Inherit" Variant="Variant.Text">About</MudButton>
