Add Prototype2 game

--- a/src/Germandf.Website/Pages/Games/Games.razor
+++ b/src/Germandf.Website/Pages/Games/Games.razor
@@ -40,6 +40,13 @@
             Image = "images/Unity.webp",
             Link = "/games/prototype-1-scene-2"
         },
+        new()
+        {
+            Title = "Prototype 2",
+            Description = "Feed as many animals as possible without dying",
+            Image = "images/Unity.webp",
+            Link = "/games/prototype-2"
+        },
     };
 
     public class Game
